# sast-gated-flask-api

./: .gitignore  .gitleaks.toml  DAST.md  LICENSE  NOTES.md  README.md  SCA.md  SECRETS.md  SECURITY.md  pyproject.toml
.github/workflows/: dast.yml  sast.yml  sca.yml  secrets.yml
.semgrep/: tainted-subprocess.yml
dast/: zap-seeds.txt
data/exports/: readme.txt
scripts/: wait-for-health.sh
src/webshop/: __init__.py  config.py  db.py
src/webshop/routes/: __init__.py  admin.py  auth.py  dast.py  orders.py  pricing.py  products.py
tests/: test_health.py
