[project]
name = "webshop"
version = "0.1.0"
description = "Intentionally vulnerable Flask webshop API for SAST/DevSecOps demos"
readme = "README.md"
authors = [
    { name = "Kristian Hudec", email = "hudec.kristian@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "requests>=2.34.2",
]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "httpx>=0.28.1",
    "pre-commit>=4.0.0",
    "pytest>=9.1.1",
    "semgrep>=1.168.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
